Upgrade Testcontainers to 2.0.3 #34